<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#376092" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/konvertor"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/valyuta" />

        <RelativeLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/relative_background" >

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:src="@drawable/arrow_left" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/azn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radiobuttons"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <EditText
            android:id="@+id/edit_azn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="3dp" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/usd_button"
            android:padding="2dp"
            android:text="@string/azn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/azn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/azn"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <EditText
            android:id="@+id/edit_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="3dp" >
        </EditText>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/usd_button"
            android:padding="2dp"
            android:text="@string/usd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/azn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/usd"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <EditText
            android:id="@+id/edit_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_shadow"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="3dp" >
        </EditText>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="25dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/usd_button"
            android:padding="2dp"
            android:text="@string/eur"
            android:textColor="@android:color/white"
            android:textSize="@dimen/azn" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radiobuttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:orientation="horizontal"
        android:padding="5dp" >

        <RadioButton
            android:id="@+id/radioButton_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/purchase" />

        <RadioButton
            android:id="@+id/radioButton_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/sale" />
    </RadioGroup>

</RelativeLayout>