<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#376092" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/konvertor"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView1"
            android:paddingLeft="4dp"
            android:paddingRight="9dp"
            android:text="@string/petrol"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            android:paddingRight="13dp"
            android:paddingTop="4dp"
            android:src="@drawable/benzin_icon" />

        <RelativeLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/relative_background" >

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:src="@drawable/arrow_left" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/id10"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="120dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/edits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/yanacaq_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <EditText
                    android:id="@+id/yanacaq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:background="@drawable/edittext_shadow"
                    android:ems="13"
                    android:hint="@string/yanacaq"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:textSize="16sp" />

                <requestFocus />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mesafe_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="10dp" >

                <EditText
                    android:id="@+id/mesafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shadow"
                    android:ems="13"
                    android:hint="@string/mesafe"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/km_litr_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/km_litr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="17dp"
                    android:text="@string/km_litr" />

                <EditText
                    android:id="@+id/edit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shadow"
                    android:clickable="false"
                    android:ems="9"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:textSize="16sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/km_azn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/km_azn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="6dp"
                    android:text="@string/km_azn" />

                <EditText
                    android:id="@+id/edit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shadow"
                    android:clickable="false"
                    android:ems="9"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>