<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#376092" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/mezenne"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <RelativeLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/relative_background" >

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/arrow"
                android:contentDescription="@string/app_name"
                android:paddingBottom="10dp"
                android:paddingLeft="1dp"
                android:paddingTop="10dp"
                android:src="@drawable/mezenne" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <CheckBox
                android:id="@+id/valuta"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_rate_button"
                android:button="@drawable/selector_rate_button"
                android:clickable="true"
                android:padding="1dp"
                android:text="@string/valuta"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />

            <CheckBox
                android:id="@+id/trade"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_trade_button"
                android:button="@drawable/selector_trade_button"
                android:clickable="true"
                android:padding="1dp"
                android:text="@string/trade"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />

            <CheckBox
                android:id="@+id/petrol"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_petrol_button"
                android:button="@drawable/selector_petrol_button"
                android:clickable="true"
                android:padding="1dp"
                android:text="@string/petrol"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="40dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/upperWebView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#4F81BD" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/app_name"
                android:padding="0dp"
                android:src="@drawable/arrow_left"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal" >

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:isScrollContainer="true" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>